[package]
name = "fn_name"
version = "0.1.0-dev.1"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/jswrenn/fn_name"
description = "Macros that produce the name of the function they're invoked within."
categories = ["no-std", "rust-patterns"]
keywords = ["function", "method", "name", "macro"]
